<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include
        layout="@layout/toolbar"
        android:id="@+id/toolbar_main" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="13dp"
        android:textSize="18sp"
        android:text="@string/assistance"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:scaleType="centerCrop"
        android:foreground="@drawable/button_background"/>

    <EditText
        android:id="@+id/locationName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name"/>

    <!-- EditText for coordinates -->
    <EditText
        android:id="@+id/latitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_latitude" />


    <EditText
        android:id="@+id/longitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_longitude" />


    <EditText
        android:id="@+id/locationCountry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_country"/>
    <!-- EditText for date and rating -->
    <EditText
        android:id="@+id/locationDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:hint="@string/date_format"/>

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_gravity="center"
        android:onClick="ratingClick"/>

    <EditText
        android:id="@+id/locationRate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/enter_rating" />

    <ListView
        android:id="@+id/locationsListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:divider="@android:color/darker_gray"
        android:dividerHeight="2dp"
        android:paddingTop="16dp" />

</LinearLayout>