<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/welcome_message"/>

    <ImageView
        android:id="@+id/image_camp"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:layout_marginTop="13dp"
        android:padding="5dp"
        android:src="@drawable/travel"
        android:scaleType="centerCrop"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp"
        android:padding="10dp">
        <Button
            android:id="@+id/next_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:cornerRadius="5dp"
            android:layout_marginTop="20dp"
            android:padding="15dp"
            android:layout_margin="3dp"
            android:text="@string/button_add_message"
            android:onClick="nextPage"/>
        <Button
            android:id="@+id/saved_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:cornerRadius="5dp"
            android:layout_marginTop="20dp"
            android:padding="15dp"
            android:layout_margin="3dp"
            android:text="@string/button_saved_message"
            android:textSize="13sp"
            android:onClick="savedPage"/>

    </LinearLayout>
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:padding="5dp"
        android:src="@drawable/swimming"
        android:scaleType="centerCrop"/>

</LinearLayout>